@@ -1260,9 +1260,7 @@ MACRO(wxSYSTEM_MENU)
 MACRO(wxCLOSE_BOX)
 MACRO(wxMAXIMIZE_BOX)
 MACRO(wxMINIMIZE_BOX)
-MACRO(wxTHICK_FRAME)
 MACRO(wxSTAY_ON_TOP)
-MACRO(wxNO_3D)
 MACRO(wxDIALOG_NO_PARENT)
 
 // wxButton
